WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57853
DeleteButtonController is given invalid style
https://bugs.webkit.org/show_bug.cgi?id=57853
Summary
DeleteButtonController is given invalid style
Levi Weintraub
Reported
2011-04-05 08:53:07 PDT
DeleteButtonController::createDeletionUI() sets CSSPropertyWebkitUserModify to CSSValueNone, which is not a valid value for user modify. Instead, it should be CSSValueReadOnly. I ran into an ASSERT_NOT_REACHED in WebCore::Node::rendererIsEditable() when trying to add the plaintext value to unicode-bidi for 50949. After my new CSS value is added, every test using the DeleteButtonController crashed the same way. I can't reproduce this without the new CSS value. Anyone know why?
Attachments
Patch
(1.66 KB, patch)
2011-04-05 09:08 PDT
,
Levi Weintraub
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Levi Weintraub
Comment 1
2011-04-05 09:08:24 PDT
Created
attachment 88245
[details]
Patch
Levi Weintraub
Comment 2
2011-04-05 09:34:52 PDT
Comment on
attachment 88245
[details]
Patch Clearing flags on attachment: 88245 Committed
r82946
: <
http://trac.webkit.org/changeset/82946
>
Levi Weintraub
Comment 3
2011-04-05 09:35:05 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug