2011-04-05  Levi Weintraub  <leviw@chromium.org>

Reviewed by Ryosuke Niwa.

        DeleteButtonController is given invalid style
        https://bugs.webkit.org/show_bug.cgi?id=57853

        DeleteButtonController was assigned an invalid style that can lead to assertions
        in debug builds. This matches up the code with its intent.

        No new tests as this changes nothing on release builds.

        * editing/DeleteButtonController.cpp:
        (WebCore::DeleteButtonController::createDeletionUI):


Canonical link: https://commits.webkit.org/72730@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82946 268f45cc-cd09-0410-ab3c-d52691b4dbfc